# windows-fixer-rs

./: Cargo.toml  comment_anchor_guide.txt  justfile
src/: main.rs  windows_fixer.rs
src/windows_fixer/: cli.rs  log.rs  reg.rs  tui.rs
