[package]
name = "windows-fixer-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
owo-colors = "4.1.0"
# winapi = { version = "0.3", features = ["winuser", "winbase", "handleapi", "processthreadsapi", "synchapi", "shellapi", "winreg", "ntsecapi", "securitybaseapi", "powrprof"] }
windows = { version = "0.58.0", features = ["Win32_System_Registry"] }
